--- a/bsbox.css
+++ b/bsbox.css
@@ -4,19 +4,19 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: "Source Code Pro";
+	font-family: "Source Code Pro", sans-serif;
 	text-align: center;
-	color:#fff;
+	color: #fff;
 }
 
 body {
 	min-height: 100vh;
 	background-image: url(images/Website\ background.png);
-	background-color:cornflowerblue;
+	background-color: cornflowerblue;
 	background-size: cover;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
-	background-position:center;
+	background-position: center;
 }
 
 h1 {
@@ -140,7 +140,7 @@ hr {
 	text-align: center;
 }
 
-.center-text h1{
+.center-text h1 {
 	font-size: 2.5rem;
 	font-weight: 400;
 	margin: 0 0 40px;
@@ -177,41 +177,21 @@ hr {
 	transition: transform 0.3s ease;
 }
 
-.socials a:hover ion-icon{
+.socials a:hover ion-icon {
 	transform: scale(1.2);
-}
-
-/*Content below has to do with elements in the Works main*/
-
-.linktree {
-    margin-top: 100px;
-    padding: 1.5rem;
-	background-color: rgba(0, 0, 0, 0.7);
-	color:#fff;
-}
-
-.linktree-gallery {
-	display: inline-flex;
-	margin-right: 10px;
-	justify-content: center;
-	max-width: 200px;
-}
-
-.linktree-gallery img {
-	height: auto;
 }
 
 /**Footer stuff**/
 
 .footer {
-	position:fixed;
+	position: fixed;
 	bottom: 0px;
 	left: 0px;
 	width: 100%;
 	font-size: xx-small;
 	background-color: rgba(0, 0, 0, 0.7);
 	backdrop-filter: blur(50px);
-	color:#fff;
+	color: #fff;
 	text-align: center;
 	z-index: 1;
 
@@ -277,6 +257,7 @@ hr {
 		padding-left: 1em;
 		padding-right: 1em;
 	}
+
 	.center-text h1 {
 		margin-top: 40px;
 		margin-bottom: 10px;
