--- a/bsboxcontact.css
+++ b/bsboxcontact.css
@@ -1,14 +1,33 @@
 .hero {
     width: 100%;
-    height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.0), rgba(0,0,0,0.7)), url(images/Website\ background.png);
-    background-size: cover;
-    background-position: center;
+    height: 550px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    background-color: rgba(0,0,0,0.7);
     display: flex;
     align-items:center;
     justify-content:center;
 }
-form {
+
+.form_heading {
+	margin-top: 150px;
+	padding-top: 50px;
+	background-color: rgba(0, 0, 0, 0.7);
+}
+
+.form_heading p {
+	text-align: left;
+    padding-top: 10px;
+	padding-left: 40px;
+}
+
+.form_heading h1 {
+	text-align: left;
+	padding-left: 40px;
+	font-size: 2.5rem;
+	font-weight: 400;
+}
+.hero form {
     width: 90%;
     max-width: 600px;
 }
@@ -30,7 +49,7 @@ input, textarea {
     text-align: left;
 }
 
-label {
+.form_label {
     height: 100%;
     position: absolute;
     left: 0;
@@ -40,7 +59,7 @@ label {
     transition: 0.2s;
 }
 
-button {
+.submit_button {
     padding: 10px 0;
     color: #fff;
     outline: none;
@@ -52,14 +71,14 @@ button {
     transition: transform ease 0.5s;
 }
 
-button:hover {
+.submit_button:hover {
     transform: translateY(-5px);
 }
 
-input:valid~label,
-input:focus~label,
-textarea:focus~label,
-textarea:valid~label {
+input:valid~.form_label,
+input:focus~.form_label,
+textarea:focus~.form_label,
+textarea:valid~.form_label {
     top: -35px;
     font-size: 14px;
 }
