Updated website with current information.
- Improved CSS styling for aspects of the projects table.
- Removed unnecessary code from existing css/html
- Removed Contact page.

--- a/bsboxaboutme.css
+++ b/bsboxaboutme.css
@@ -31,12 +31,12 @@ a {
     max-width: 500px;
 }
 
-.containter {
+.container {
     max-width: 1000px;
     width: 90%;
     margin: 0 auto;
     padding: 5rem;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.83);
     height: 100%;
     padding-top: 100px;
 }
